--- a/README.Rmd
+++ b/README.Rmd
@@ -39,13 +39,13 @@ Kolmogorov-Smirnov test. Monthly Notices of the Royal Astronomical Society,
 
 ## Installation
 
-You can install the released version of the `fasano.franceschini.test` package from [CRAN](https://CRAN.R-project.org) with:
+You can install the released version of the `fasano.franceschini.test` package from [CRAN](https://cran.r-project.org/web/packages/fasano.franceschini.test/index.html) with:
 
 ``` r
 install.packages("fasano.franceschini.test")
 ```
 
-The development version of the `fasano.franceschini.test` package can be installed from [GitHub](https://github.com/) with:
+The development version of the `fasano.franceschini.test` package can be installed from [GitHub](https://github.com/braunlab-nu/fasano.franceschini.test/) with:
 
 ``` r
 # install.packages("devtools")
