--- a/README.Rmd
+++ b/README.Rmd
@@ -22,40 +22,42 @@ library(badger)
 
 <!-- badges: start -->
 
-`r badge_custom(x = "arXiv", y = "abs/2106.10539", color = "yellow", url = "https://arxiv.org/abs/2106.10539")` 
+`r badge_custom(x = "R Journal", y = "10.32614/RJ-2023-067", color = "yellow", url = "https://doi.org/10.32614/RJ-2023-067")`
 `r badge_cran_release("fasano.franceschini.test", "orange")`
 `r badge_devel("braunlab-nu/fasano.franceschini.test", "blue")` 
 `r badge_cran_download("fasano.franceschini.test", "grand-total", "green")`
 `r badge_github_actions("braunlab-nu/fasano.franceschini.test")`
 <!-- badges: end -->
 
-The `fasano.franceschini.test` package is an R implementation of the multidimensional Kolmogorov-Smirnov two-sample test as defined by Fasano and Franceschini (1987).
-
+The `fasano.franceschini.test` package is an R implementation of the multivariate Kolmogorov-Smirnov two-sample test as defined by Fasano and Franceschini (1987).
 ```
 Fasano, G. & Franceschini, A. (1987). A multidimensional version of the
 Kolmogorov-Smirnov test. Monthly Notices of the Royal Astronomical Society,
 225:155-170. doi: 10.1093/mnras/225.1.155.
 ```
+A manuscript accompanying this package was published in The R Journal.
+```
+Puritz, C., Ness-Cohn, E., Braun, R. (2023). fasano.franceschini.test: An Implementation
+of a Multivariate KS Test in R. The R Journal, 15(3):159-171. doi: 10.32614/RJ-2023-067.
+```
 
 ## Installation
 
-You can install the released version of the `fasano.franceschini.test` package from [CRAN](https://cran.r-project.org/) with:
-
+You can install the released version of the `fasano.franceschini.test` package from CRAN with:
 ``` r
 install.packages("fasano.franceschini.test")
 ```
 
-The development version of the `fasano.franceschini.test` package can be installed from Github with:
-
+The development version of the `fasano.franceschini.test` package can be installed from GitHub with:
 ``` r
-# install.packages("devtools")
+if (!require("devtools", quietly = TRUE))
+    install.packages("devtools")
 devtools::install_github("braunlab-nu/fasano.franceschini.test")
 ```
 
 ## Examples
 
 #### Underlying distributions are the same
-
 ```{r}
 library(fasano.franceschini.test)
 
@@ -72,7 +74,6 @@ fasano.franceschini.test(S1, S2, seed = 0)
 ```
 
 #### Underlying distributions are different
-
 ```{r}
 # set seed for reproducibility
 set.seed(1)
